--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,49 @@
-<p>home works!</p>
+<header  class="bg-dark py-5" >
+    <div  class="container px-4 px-lg-5 my-5">
+        <div class="text-center text-white">
+            <h1 class="display-4 fw-bolder">Tus compras con estilo</h1>
+            <h3 class="lead fw-normal text-white-50 mb-0">Aquí encontrarás los últimos diseños a la moda</h3>
+        </div>
+    </div>
+</header>
+
+
+<div id="carouselExampleDark" class=" carousel carousel-dark slide">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner ">
+        <div class="carousel-item active carousel-img-top " data-bs-interval="1000">
+            <img class="" src="assets/img/silent-disco-5067897_640.jpg"  alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Los mejores Diseños en auriculares</h5>
+                <p>Alta calidad y definición en sonido</p>
+            </div>
+        </div>  
+        <div class="carousel-item carousel-img-top" data-bs-interval="2000">
+            <img class="" src="assets/img/sunglasses-1370256_640.jpg"  alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Las mejores marcas de lentes para sol</h5>
+                <p>Encontrá sofisticados y elegantes modelos</p>
+            </div>
+        </div>
+        <div class="carousel-item carousel-img-top">
+            <img class="" src="assets/img/handbags-white-2472100_640.jpg"  alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Últimas tendencias. Mirá nuestro Shop Room</h5>
+                <p>Los mejores productos a un click de distancia</p>
+            </div>
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
