Se hizo el envase
Se le dió forma al front y se le pusó funcionalidad al botón de Agregar al carrito, que valla sumando los productos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,33 +3,46 @@
         <h1>Tu Negocio</h1>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span></button>
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                 <li class="nav-item">
-                    <a class="nav-link" routerLink=" "><h4>Home</h4></a>
+                    <a class="nav-link" routerLink=" ">
+                        <h4>Home</h4>
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/products"><h4>Productos</h4></a>
+                    <a class="nav-link" routerLink="/products">
+                        <h4>Productos</h4>
+                    </a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false"><h4>Shop</h4></a>
+                    <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        <h4>Shop</h4>
+                    </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" routerLink="/products"><h6>Todos los productos</h6></a></li>
+                        <li><a class="dropdown-item" routerLink="/products">
+                                <h6>Todos los productos</h6>
+                            </a></li>
                         <li>
                             <hr class="dropdown-divider" />
                         </li>
-                        <li><a class="dropdown-item" href="#!"><h6>Ofertas</h6></a></li>
-                        <li><a class="dropdown-item" href="#!"><h6>Lo nuevo</h6></a></li>
+                        <li><a class="dropdown-item">
+                                <h6>Ofertas</h6>
+                            </a></li>
+                        <li><a class="dropdown-item">
+                                <h6>Lo nuevo</h6>
+                            </a></li>
                     </ul>
                 </li>
             </ul>
             <form class="d-flex">
-                <button class="btn btn-outline-dark" type="submit">
+                <button class="btn btn-outline-dark" type="button">
                     <i class="bi bi-cart-fill"></i>
                     Carrito
-                    <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                    <span class="badge bg-dark text-white ms-1 rounded-pill"> {{cartCount}} </span>
                 </button>
             </form>
         </div>
@@ -40,7 +53,7 @@
 
 <footer class="py-5 bg-dark">
     <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; El Santo 
+        <p class="m-0 text-center text-white">Copyright &copy; El Santo
             <i class="bi bi-person-bounding-box"> c</i>
             <i class="bi bi-lightbulb"> d</i>
             <i class="bi bi-feather"></i>
@@ -48,3 +61,5 @@
         <p class="m-0 text-center text-white">Tu Sitio Web 2024</p>
     </div>
 </footer>
+<!--//"js/demo/datatables-demo.js"
+              //"js/sb-admin-2.min.js",-->
