--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -30,8 +30,7 @@
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" (click)="addToCart()">Add to
-                                cart</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" (click)="addToCart()">Agregar al Carrito</a></div>
                     </div>
                     
                 </div>
@@ -57,7 +56,7 @@
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="">Add to cart</a></div>
                     </div>
                 </div>
             </div>
