--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container px-4 px-lg-5">
         <h1>Tu Negocio</h1>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                 <li class="nav-item">
@@ -18,28 +15,30 @@
                     </a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         <h4>Shop</h4>
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" routerLink="/products">
                                 <h6>Todos los productos</h6>
-                            </a></li>
+                            </a>
+                        </li>
                         <li>
                             <hr class="dropdown-divider" />
                         </li>
                         <li><a class="dropdown-item">
                                 <h6>Ofertas</h6>
-                            </a></li>
+                            </a>
+                        </li>
                         <li><a class="dropdown-item">
                                 <h6>Lo nuevo</h6>
-                            </a></li>
+                            </a>
+                        </li>
                     </ul>
                 </li>
             </ul>
             <form class="d-flex">
-                <button class="btn btn-outline-dark" type="button">
+                <button class="btn btn-outline-dark" type="button" routerLink="/carrito" >
                     <i class="bi bi-cart-fill"></i>
                     Carrito
                     <span class="badge bg-dark text-white ms-1 rounded-pill"> {{cartCount}} </span>
