--- a/src/app/pages/carrito/carrito.component.html
+++ b/src/app/pages/carrito/carrito.component.html
@@ -1,1 +1,69 @@
-<p>carrito works!</p>
+<div class="container mt-5">
+  @if (loading) {
+  <h6>Cargando productos.... </h6>
+  }
+
+  <div class="row">
+    <!-- Información de productos -->
+    <div class="col-md-7">
+      <h3 class="mb-4">Productos Disponibles</h3>
+      @if (!loading) {
+      <div>
+        <!-- Si el carrito está vacío -->
+        <div *ngIf="productosEnCarrito.length === 0" class="alert alert-info">
+          <h4>El carrito está vacío.</h4>
+        </div>
+        @for (producto of productosEnCarrito; track $index) {
+        <div class="list-group row g-4">
+          <!-- Producto -->
+          <div class="col-12">
+            <div class="card">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="https://via.placeholder.com/150" class="img-fluid rounded-start" alt="Producto">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title"> {{producto.name}} </h5>
+                    <p class="card-text">Precio: <strong> {{producto.price| currency}} </strong></p>
+                    <button class="btn btn-danger" (click)="delete(producto)">
+                       Quitar del Carrito<i class="bi bi-trash3"></i>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Fin Producto -->
+        </div>
+        <br>
+        }
+      </div>
+      }
+    </div>
+
+
+
+    <!-- Carrito de Compras -->
+    <div class="col-md-5">
+      <h3 class="mb-4">
+        <i class="bi bi-cart-check-fill"></i> Carrito
+      </h3>
+      @for (product of productosEnCarrito; track $index) {
+      <ul class="list-group mb-4">
+        <!-- Producto en el carrito -->
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          {{product.name}}
+          <span> {{product.price | currency}} </span>
+        </li>
+        <!-- Fin Producto -->
+      </ul>
+       }
+      <div class="text-end">
+        <h5>Total: <strong> {{getTotal() | currency}} </strong></h5>
+      </div>
+      <div class="text-end">
+        <button class="btn btn-primary" (click)="checkout()">Comprar</button>
+    </div>
+  </div>
+</div>
