--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -6,13 +6,18 @@
   <div class="row">
     <!-- Información de productos -->
     <div class="col-md-7">
-      <h3 class="mb-4">Productos Disponibles</h3>
+      <h3 class="mb-4">Tu compra</h3>
       @if (!loading) {
       <div>
         <!-- Si el carrito está vacío -->
-        <div *ngIf="productosEnCarrito.length === 0" class="alert alert-info">
-          <h4>El carrito está vacío.</h4>
+         @if (productosEnCarrito.length === 0) {
+        <div class="alert alert-info gradient-info">
+          <h4 class="text-white">El carrito está vacío.<a routerLink="/products"><strong class="text-white">¡Ir de compras!</strong></a></h4>
         </div>
+        <div class="px-3 py-5 bg-gradient-info text-white" role="alert">
+          
+        </div>
+       }
         @for (producto of productosEnCarrito; track $index) {
         <div class="list-group row g-4">
           <!-- Producto -->
@@ -26,9 +31,16 @@
                   <div class="card-body">
                     <h5 class="card-title"> {{producto.name}} </h5>
                     <p class="card-text">Precio: <strong> {{producto.price| currency}} </strong></p>
-                    <button class="btn btn-danger" (click)="delete(producto)">
+                    <p class="card-text">
+                      Cantidad:
+                      <button class="btn btn-sm btn-primary me-2" (click)="decreaseQuantity(producto)">-</button>
+                      {{ producto.cantidad }}
+                      <button class="btn btn-sm btn-primary ms-2" (click)="increaseQuantity(producto)">+</button>
+                    </p>
+
+                    <!--<button class="btn btn-danger" (click)="delete(producto)">
                        Quitar del Carrito<i class="bi bi-trash3"></i>
-                    </button>
+                    </button>-->
                   </div>
                 </div>
               </div>
@@ -54,16 +66,21 @@
         <!-- Producto en el carrito -->
         <li class="list-group-item d-flex justify-content-between align-items-center">
           {{product.name}}
-          <span> {{product.price | currency}} </span>
+          <span>
+            <p class="card-text">Subtotal: {{ product.price * product.cantidad! | currency }}</p>
+          </span>
         </li>
         <!-- Fin Producto -->
       </ul>
-       }
+      }
       <div class="text-end">
-        <h5>Total: <strong> {{getTotal() | currency}} </strong></h5>
+        <h5>Total: <strong> {{getTotalItems() | currency}} </strong></h5>
       </div>
-      <div class="text-end">
-        <button class="btn btn-primary" (click)="checkout()">Comprar</button>
+      @if (productosEnCarrito.length > 0) {
+       <div class="text-end">
+         <button class="btn btn-primary" (click)="checkout()">Comprar</button>
+       </div>
+      }
     </div>
   </div>
-</div>
+  <hr>
