--- a/src/app/pages/sale/sale.component.html
+++ b/src/app/pages/sale/sale.component.html
@@ -1,4 +1,4 @@
-<section class="py-5 loading fonde">
+<section class="py-5 loading">
     @if (loading) {
         <h6>Cargando productos.... </h6>
     } 
@@ -6,16 +6,11 @@
         <div class="container px-4 px-lg-5 mt-5">
             <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
     
-                @for (product of productList; track $index) {
+                @for (product of productosOfertas; track $index) {
                 <div class="col mb-5">
                     <div class="card h-100">
                         <!-- Sale badge-->
-                        <div class="badge  text-black position-absolute new rotate-15"
-                             *ngIf="product.isNew">
-                            <h6 class="d-flex justify-content-center text-black mb-2">Nuevo</h6>
-                        </div>
-                        <div class="badge  text-black position-absolute rotate-15 sale"
-                             *ngIf="product.isSale">
+                        <div class="badge  text-black position-absolute sale">
                             <h6>Oferta</h6>
                         </div>
                         <!-- Product image-->
